# unipi-tools

./: .editorconfig  .gitignore  .gitlab-ci.yml  .mirrorhash  AUTHORS  Makefile  Makefile.am  README.md  configure.ac  libunipichannel.pc.in
debian/: README.source  control  control-generator.sh  copyright  end_of_changelog  rules  unipi-firmware-tools.install  unipi-firmware-tools.links  unipi-firmware-tools.postinst  unipi-firmware-tools.postrm  unipi-modbus-docker.install  unipi-modbus-tools.install  unipi-modbus-tools.postinst  unipi-modbus-tools.postrm  unipi-modbus-tools.prerm  unipi-modbus-tools.unipitcp.service  unipi-tools-dev.install  unipi-tools-libs.install
debian.n/: control  rules  unipi-firmware-tools.install  unipi-modbus-tools.install  unipi-modbus-tools.preinst  unipi-modbus-tools.unipitcp.service
debian.pre/: README  copyright  end_of_changelog  rules  unipi-firmware-tools.install  unipi-modbus-tools.install
docker/: Dockerfile  alpine-compile.sh  build.sh
fwtools/: Makefile.am  fw.c  fwdriver.c
fwtools/win32/: Makefile
gitlab-ci/: build-before-script.sh
lib/: .gitignore  Makefile.am  armspi.c  armspi.h  armutil.c  armutil.h  kchannel.h  spicrc.c  spicrc.h  unipi_channel.c  unipichannel-version.h.in
src/: Makefile  armspi.c  armspi.h  armutil.c  armutil.h  fw.c  fwdriver.c  fwopt.c  kchannel.h  nb_modbus.c  nb_modbus.h  r2k.c  testch.c  unipi-target.map  unipi_channel.c  unipi_tcp_server.c  unipicheck.c  unipiutil.c  unipiutil.h  virtual_regs.c  virtual_regs.h
src/firmware-tools/: .gitignore  Makefile.am  binary_data.c  binary_data.h  debug_print.h  fw.c  fwbin.c  fwconfig.c  fwconfig.h  fwdriver.c  fwdriver.h  fwdriveri2c.c  fwdriverserial.c  fwdriverspi.c  fwimage.c  fwimage.h  fwopt.c  fwopt.h  platform.c  platform.h  unipifwupdate.service  unipifwupdate.service.in  unipiimg.c  unipiimg.h
src/firmware-tools/win32/: win32_serial.c  win32_serial.h
src/modbus-tools/: .gitignore  Makefile.am  debug_print.h  nb_modbus.c  nb_modbus.h  r2k.c  unipi_tcp_server.c  unipitcp.c  unipitcp.default  unipitcp.init.in  unipitcp.service.in  virtual_leds.c  virtual_leds.h  virtual_regs.c  virtual_regs.h
tests/: .gitignore  Makefile.am  bandwidth-client.c  test-channel.c
tools/: Makefile.am  virtual_regs.h
unipi-common/systemd/system/: unipi-S227.service  unipiS227.target  unipiphyfix.service
unipi-firmware-tools/systemd/system.pre/: unipifwupdate.service
unipi-modbus-tools/systemd/system/: unipitcp.service
unipichannel/: armspi.c  armutil.c  kchannel.h  unipi_channel.c
